# peachmilk_editor

./: CMakeLists.txt  CMakePresets.json  README.md  engine.rc
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake  winsdk_vfs_overlay.yaml
build-win/winsdk_lib_symlinks/: aclui.lib  activeds.lib  adsiid.lib  advapi32.lib  advpack.lib  ahadmin.lib  amsi.lib  amstrmid.lib  appmgmts.lib  appmgr.lib  appnotify.lib  audiobaseprocessingobject.lib  audiobaseprocessingobjectv140.lib  audioeng.lib  audiomediatypecrt.lib  authz.lib  aux_ulib.lib  avifil32.lib  avrt.lib  basesrv.lib  bcp47mrm.lib  bcrypt.lib  bindlink.lib  bits.lib  bluetoothapis.lib  bthprops.lib  bufferoverflow.lib  bufferoverflowu.lib  cabinet.lib  certadm.lib  certca.lib  certcli.lib  certidl.lib  certpoleng.lib  cfgmgr32.lib  chakrart.lib  cimfs.lib  cldapi.lib  clfsw32.lib  clusapi.lib  (+441 more)
include/AirGuanZ/: imfilebrowser.h
include/cereal/: access.hpp  cereal.hpp
include/glad/: glad.h
include/imgui/: imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imstb_truetype.h
include/src/: glad.c
src/: headers.h  main.cpp  stb.h
src/audio/: audio.cpp  audio.hpp  audioclip.cpp  audioclip.hpp  audiosource.cpp  audiosource.hpp  channelgroup.cpp  channelgroup.hpp
src/editor/: editor.cpp  editor.hpp  editorWM.cpp  editorWM.hpp  project.cpp  project.hpp
src/render/: audioclip.cpp  audioclip.hpp  audiosource.cpp  audiosource.hpp  blend.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  framebuffer.cpp  framebuffer.hpp  level.cpp  level.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  renderentity.cpp  renderentity.hpp  rendertexture.cpp  rendertexture.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  textureatlas.cpp  textureatlas.hpp  texturedata.hpp  transform.cpp  transform.hpp  vertex.hpp
src/shader/: shader.cpp  (+2 more)
(+53 files in other folders)
